# Static-Analysis-of-Mach-O-Binary-Files

./: CMakeLists.txt  README.md
LIEF-0.16.5-Darwin-arm64/include/LIEF/: config.h  version.h
LIEF-0.16.5-Darwin-arm64/lib/: libLIEF.dylib
LIEF-0.16.5-Darwin-arm64/lib/cmake/LIEF/: LIEFConfig.cmake  LIEFConfigVersion.cmake  LIEFExport-shared-release.cmake  LIEFExport-shared.cmake  LIEFExport-static.cmake
LIEF-0.16.5-Darwin-arm64/lib/pkgconfig/: LIEF.pc
include/: signparse.h  utils.h
include/kernel/: actions.h  kernel_cli.h
include/macho/: actions.h  macho_cli.h
src/: main.cpp  signparse.cpp  utils.cpp
src/kernel/: actions.cpp  kernel_cli.cpp
src/macho/: actions.cpp  macho_cli.cpp
